force-app-modified/main/default/objects/Boats__c/Boats__c.object-meta.xml
<CustomObject>
    <label>סירה</label>
    <nameField>
        <label>שם סירה</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>סירות</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>