force-app-modified/main/default/objects/Boats__c/fields/Boat_Id__c.field-meta.xml
<CustomField>
    <fullName>Boat_Id__c</fullName>
    <displayFormat>B-{00000}</displayFormat>
    <label>מספר מזהה סירה</label>
    <type>AutoNumber</type>
</CustomField>