force-app-modified/main/default/objects/Boats__c/fields/Convertion__c.field-meta.xml
<CustomField>
    <fullName>Convertion__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>יחס המרה</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>