force-app-modified/main/default/objects/Boats__c/fields/DOCK__c.field-meta.xml
<CustomField>
    <fullName>DOCK__c</fullName>
    <label>רציף</label>
    <length>20</length>
    <type>Text</type>
</CustomField>