force-app-modified/main/default/objects/Boats__c/fields/flares_exp__c.field-meta.xml
<CustomField>
    <fullName>flares_exp__c</fullName>
    <label>תוקף פירוטכני</label>
    <type>Date</type>
</CustomField>