force-app-modified/main/default/objects/Boats__c/fields/insurance_exp__c.field-meta.xml
<CustomField>
    <fullName>insurance_exp__c</fullName>
    <label>תוקף ביטוח</label>
    <type>Date</type>
</CustomField>