force-app-modified/main/default/objects/Boats__c/fields/KEY__c.field-meta.xml
<CustomField>
    <fullName>KEY__c</fullName>
    <label>מפתח לרציף</label>
    <length>35</length>
    <type>Text</type>
</CustomField>