force-app-modified/main/default/objects/Boats__c/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <label>ישן</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>