force-app-modified/main/default/objects/Boats__c/fields/Max_Passenger__c.field-meta.xml
<CustomField>
    <fullName>Max_Passenger__c</fullName>
    <label>כמות נוסעים מקסימלית</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>