force-app-modified/main/default/objects/Boats__c/fields/Pyrotechnics_Experation_Date__c.field-meta.xml
<CustomField>
    <fullName>Pyrotechnics_Experation_Date__c</fullName>
    <label>תוקף פירוטכניקה</label>
    <type>Date</type>
</CustomField>