force-app-modified/main/default/objects/Boats__c/fields/radio_epx__c.field-meta.xml
<CustomField>
    <fullName>radio_epx__c</fullName>
    <label>תוקף תעודת אלחוט</label>
    <type>Date</type>
</CustomField>