force-app-modified/main/default/objects/Boats__c/fields/survey_exp__c.field-meta.xml
<CustomField>
    <fullName>survey_exp__c</fullName>
    <label>תוקף אישור הנדסי</label>
    <type>Date</type>
</CustomField>