force-app-modified/main/default/objects/Boats__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>סוג סירה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Boat_Type</valueSetName>
    </valueSet>
</CustomField>